update lại booking có name vet, bird + bill api bị ngu
